# OpenMultiBox

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
OpenMultiBox/: CMakeLists.txt  settings.json
OpenMultiBox/include/: EventLoop.h  UserInterface.h  WinApiUtil.h  Window.h  WindowGroup.h
OpenMultiBox/source/: EventLoop.cpp  Main.cpp  UserInterface.cpp  WinApiUtil.cpp  Window.cpp  WindowGroup.cpp
